plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '2.1.7.RELEASE'
}

apply plugin: 'io.spring.dependency-management'

group = 'uk.gov.dwp.dataworks'
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()

    flatDir {
        dirs("/opt/cloudhsm/java")
    }
}

tasks.withType(JavaExec) {
    systemProperties System.properties
}


// CloudHSM sdk: See https://docs.aws.amazon.com/cloudhsm/latest/userguide/client-history.html
// ...Must match versions in ami-builder-configs and dependencies below
bootJar {
    launchScript()
    manifest {
        attributes 'Class-Path': '/opt/dks/config /opt/cloudhsm/java/cloudhsm-3.0.0.jar /opt/cloudhsm/java/log4j-api-2.8.jar /opt/cloudhsm/java/log4j-core-2.8.jar'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'com.google.guava:guava:27.0.1-jre'
    implementation 'commons-codec:commons-codec:1.12'
    implementation 'org.apache.commons:commons-lang3:3.9'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.amazonaws:aws-java-sdk-kms:1.11.534'
    implementation 'com.amazonaws:aws-java-sdk-ssm:1.11.534'
    implementation "io.springfox:springfox-swagger2:2.9.2"
    implementation "io.springfox:springfox-swagger-ui:2.9.2"
    implementation "org.springframework.retry:spring-retry:1.2.4.RELEASE"
    implementation "org.springframework.boot:spring-boot-starter-aop"

    // CloudHSM sdk: See notes above and in readme
    compileOnly    group: "cloudhsm", name: "cloudhsm-3.0.0"
    testImplementation    group: "cloudhsm", name: "cloudhsm-3.0.0"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testCompile "junit:junit:4.12"
}


mainClassName = "uk.gov.dwp.dataworks.DataKeyServiceApplication"
